# pythonProject1

./: .gitignore  manage.py  pyproject.toml
.github/workflows/: ci.yml
pythonProject1/: asgi.py  settings.py  urls.py  wsgi.py
